# StageView

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/qml/: ControlPanel.qml  Main.qml  Meter.qml  SourceNode.qml  StageCanvas.qml
app/src/: MidiInput.cpp  MidiInput.h  StageModel.cpp  StageModel.h  main.cpp
audio-engine/: CMakeLists.txt
audio-engine/src/: AudioEngine.cpp  AudioEngine.h  Dsp.cpp  Dsp.h  OscServer.cpp  OscServer.h  WavFile.cpp  WavFile.h  main.cpp
clients/: README.md
clients/companion-dart/: README.md  pubspec.yaml
clients/companion-flutter/: README.md  pubspec.yaml
clients/companion-flutter/android/app/: build.gradle.kts
clients/companion-flutter/android/app/src/main/: AndroidManifest.xml
clients/companion-flutter/android/app/src/main/kotlin/com/mattbrook/stage_companion/: MainActivity.kt
clients/companion-flutter/lib/: companion_client.dart  main.dart  osc.dart
clients/companion-flutter/test/: widget_test.dart
clients/console-pascal/: README.md  stagectl.lpr
clients/dashboard-csharp/: Dashboard.csproj  MainForm.cs  Osc.cs  Program.cs  README.md
clients/legacy-panel-pascal/: README.md  legacypanel.lpi  legacypanel.lpr  mainform.pas  oscnet.pas
clients/testrig-csharp/: Osc.cs  Program.cs  README.md  StageRig.csproj
core/: CMakeLists.txt  MidiMapper.cpp  MidiMapper.h  Osc.cpp  Osc.h  OscEndpoint.cpp  OscEndpoint.h
engine/: mock_engine.py  osc.py  test_osc.py
tests/: CMakeLists.txt  endpoint_test.cpp  midi_test.cpp  osc_test.cpp
tools/: deploy.ps1  dev-build.ps1  prepare-stems.ps1  probe.py
